# FDS-Project

./: .gitattributes  README.md  pyproject.toml
Satellite Image Classification/: streamlit_app.py
Satellite Image Classification/CNN/: notebook.ipynb
Satellite Image Classification/CNN/model/: final_satellite_cnn_5channel.pth  model.py  predict.py  train.py
Satellite Image Classification/CNN/result/: graph.py
Satellite Image Classification/Pretrained resnet18/: main.py  pretrained.ipynb  sat_img_classifier_resnet18.pth
Satellite Image Classification/Pretrained_ViT/: ViT_Local_model.py  ViT_Local_train.py  Visual_Transformer_Local_LightDump.pth  Visual_Transformer_Pretrained.ipynb  Visual_Transformer_Pretrained_LightDump.pth
