[project]
name = "fds-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.8",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pyqt6>=6.10.1",
    "pyside6>=6.10.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
